syntax = "proto3";
package service.types.v1;
import "pkg/types/v1/object.proto";
option go_package = "github.com/bnb-chain/greenfield-storage-provider/service/types/v1";

enum ErrCode {
  ERR_CODE_SUCCESS_UNSPECIFIED = 0;
  ERR_CODE_ERROR= 1;
}

message ErrMessage {
  ErrCode err_code = 1;
  string err_msg = 2;
}


message UploaderServiceUploadPayloadRequest {
  string trace_id = 1;
  bytes tx_hash = 2;
  string bucket_name = 3;  // Temporary field
  string object_name = 4;  // Temporary field
  uint64 object_size = 5;  // Temporary field
  pkg.types.v1.RedundancyType redundancy_type = 6;  // Temporary field
  uint64 job_id = 7;
  bytes payload_data = 8;
}

message UploaderServiceUploadPayloadResponse {
  string trace_id = 1;
  uint64 object_id = 2;  // Temporary field for challenge
  ErrMessage err_message = 3;
}

service UploaderService {
  rpc UploadPayload(stream UploaderServiceUploadPayloadRequest) returns (UploaderServiceUploadPayloadResponse) {};
}
